# petpet-auto-updater

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/plugins/applications/: __init__.py
src/plugins/petpet/: __init__.py
src/utils/: sql.py
